update skywalking agent (#33)